[tool.poetry]
name = "async-network-live"
version = "0.1.0"
description = "radio network contains own cells and cells shared by other operators. This project collect all cells to one db by RAN technologies"
authors = ["Ramil Albakov <ramil.albakov2@gmail.com>"]
readme = "README.md"
packages = [{include = "async_network_live"}]

[tool.poetry.dependencies]
python = "^3.8.1"
enm-client-scripting = {path = "lib/enm_client_scripting-1.22.2-py2.py3-none-any.whl"}
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"
pytest = "^8.2.0"
flake8 = "^7.0.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
